added responsive navbar

--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>GameZone</title>
-      <!-- css file -->
-      <link rel="stylesheet" href="./styles/style.css">
-</head>
-<body>
-      
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GameZone</title>
+    <!-- font awesome (cdn) -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
+    <!-- css file -->
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body>
+    <!-- header section -->
+    <header class="container header">
+      <nav class="header__nav flex">
+        <div class="nav__logo flex">
+          <img
+            src="./B8A2-Gamer-Zone-main/images/Frame.png"
+            alt="logo__img"
+            class="logo__img" />
+          <div class="gamer">
+            <span style="color: #ff42af; font-size: 20px">G</span>amer
+          </div>
+        </div>
+        <ul class="nav__list flex">
+          <li class="nav__item"><a href="" class="nav__link">About us</a></li>
+          <li class="nav__item"><a href="" class="nav__link">Developers</a></li>
+          <li class="nav__item special">
+            <a href="" class="nav__link nav__link-icons flex"
+              ><p>Follow us</p>
+              <i class="fa-brands fa-youtube"></i>
+              <i class="fa-brands fa-tiktok tiktok-icon"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
