added responsive banner section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <!-- header section -->
+    <!-- ==================== |HEADER SECTION STARTS ================= -->
     <header class="container header">
       <nav class="header__nav flex">
         <div class="nav__logo flex">
@@ -24,7 +24,7 @@
             alt="logo__img"
             class="logo__img" />
           <div class="gamer">
-            <span style="color: #ff42af; font-size: 20px">G</span>amer
+            <span class="clr-primary" style="font-size: 20px">G</span>amer
           </div>
         </div>
         <ul class="nav__list flex">
@@ -40,5 +40,33 @@
         </ul>
       </nav>
     </header>
+    <!-- ==================== || HEADER SECTION ENDS ================= -->
+    <!-- ==================== || BANNER SECTION STARTS ================= -->
+    <section class="banner container flex">
+      <article class="banner__content">
+        <h3 class="banner__h3-title">Play like the</h3>
+        <h1 class="banner__h1-title">G.O.A.T</h1>
+        <ul class="banner__instructions">
+          <li class="banner__item flex description">
+            <img src="./B8A2-Gamer-Zone-main/icons/video.svg " alt="" />1-Click
+            instant play
+          </li>
+          <li class="banner__item flex description">
+            <img src="./B8A2-Gamer-Zone-main/icons/download.svg" alt="" />No
+            Download
+          </li>
+          <li class="banner__item flex description">
+            <img src="./B8A2-Gamer-Zone-main/icons/social.svg" alt="" />1000s of
+            supported online games
+          </li>
+        </ul>
+        <button class="cta">SIGN IN</button>
+        <button class="cta banner__btn--secondary">Go Rogue</button>
+      </article>
+      <div class="banner__img">
+        <img src="./B8A2-Gamer-Zone-main/images/Group 18.png" alt="" />
+      </div>
+    </section>
+    <!-- ==================== || BANNER SECTION ENDS ================= -->
   </body>
 </html>
