added 'we are gamer section' that is completely responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li class="nav__item"><a href="" class="nav__link">About us</a></li>
           <li class="nav__item"><a href="" class="nav__link">Developers</a></li>
           <li class="nav__item special">
-            <a href="" class="nav__link nav__link-icons flex"
+            <a href="https://www.tiktok.com/" class="nav__link nav__link-icons flex"
               ><p>Follow us</p>
               <i class="fa-brands fa-youtube"></i>
               <i class="fa-brands fa-tiktok tiktok-icon"></i>
@@ -70,6 +70,17 @@
       </div>
     </section>
     <!-- ==================== || BANNER SECTION ENDS ================= -->
+        <!-- ==================== || WE ARE GAMER SECTION STARTS ================= -->
+        <section class="container we-gamer flex margin">
+          <div class="we-gamer__img-wrap"><img src="./B8A2-Gamer-Zone-main/images/pngwing 4.png" alt=""></div>
+          <article class="we-gamer__content">
+            <h2 class="gradient-txt">We are gamer</h2>
+            <p class="description">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+            <button class="cta">Know more</button><br><b style="font-weight: 400;">Our purpose...</b>
+            <h2 class="unleash-the-gamer">
+              “unleash the gamer in everyone”</h2>
+          </article>        </section>
+    <!-- ==================== || WE ARE GAMER SECTION ENDS ================= -->
     <!-- ==================== || ONLINE GAME SECTION STARTS ================= -->
     <section class="container adventure margin">
       <h2 class="adventure__title">
