added optional careers section

--- a/index.html
+++ b/index.html
@@ -147,29 +147,66 @@
     
     <!-- ==================== || ONLINE SECTION ENDS ================= -->
     <!-- ==================== || NO DOWNLOAD SECTION STARTS ================= -->
-    <section class="no-download container flex margin">
-      <div class="no-download__content">
-        <h2 class="gradient-txt">Play Instantly</h2>
-        <h2>No Download No Installs</h2>
-        <p class="description">
-          Play games online for free without downloading. Just click the Play
-          button and play instantly in your browser.
-        </p>
-      </div>
-      <div class="img-wall">
-        <div class="no-download__img-wrapper">
-          <div class="no-download__parent-img">
-            <img src="./B8A2-Gamer-Zone-main/images/Rectangle 55.png" alt="" />
-            <div class="no-download__child-img">
-              <img
-                src="./B8A2-Gamer-Zone-main/images/Rectangle 66.png"
-                alt="" />
+    <section class="no-download-sec">
+      <div class="no-download flex container margin">
+        <div class="no-download__content">
+          <h2 class="gradient-txt">Play Instantly</h2>
+          <h2>No Download No Installs</h2>
+          <p class="description">
+            Play games online for free without downloading. Just click the Play
+            button and play instantly in your browser.
+          </p>
+        </div>
+        <div class="img-wall">
+          <div class="no-download__img-wrapper">
+            <div class="no-download__parent-img">
+              <img src="./B8A2-Gamer-Zone-main/images/Rectangle 55.png" alt="" />
+              <div class="no-download__child-img">
+                <img
+                  src="./B8A2-Gamer-Zone-main/images/Rectangle 66.png"
+                  alt="" />
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- ==================== || No DOWNLOAD SECTION ENDS ================= -->
+    <!-- ==================== || Careers SECTION STARTS  ================= -->
+    <section class="careers">
+      <article class="careers__inner-container flex container">
+        <div class="careers__content">
+          <h2>Careers</h2>
+          <p class="careers__description">Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
+
+          <article class="career__list-container flex flex-between">
+            <ul class="career__list">
+              <li class="career__item multimedia-artist">Multimedia Artist</li>
+              <li class="career__item data-engineer">Data Engineer</li>
+              <li class="career__item android-engineer">Android Engineer</li>
+              <li class="career__item server-developer">Server Developer</li>
+              <li class="career__item group-financial-accountant">Group Financial Accountant</li>
+              <li class="career__item senior-user-acquisition-specialist">Senior User Acquisition Specialist</li>
+              <button class="cta careers__btn--primary">See all positions</button>
+            </ul>
+            <ul class="career__list txt-right">
+              <li class="career__item">Lisbon, Portugal</li>
+              <li class="career__item">Lisbon, Portugal</li>
+              <li class="career__item">Zoetermeer, Netherlands</li>
+              <li class="career__item">Lisbon, Portugal</li>
+              <li class="career__item">London, United Kingdom</li>
+              <li class="career__item">Lisbon, Portugal</li>
+            </ul>                        
+          </article>
+        </div>
+        <!-- careers img -->
+        <div class="careers__img-wrapper">
+          <img src="./B8A2-Gamer-Zone-main/images/Group 65.png" alt="Career plan" class="career__img">
+        </div>
+      </article>
+    </section>
+
+    <!-- ==================== || Careers SECTION ENDS ================= -->
     <!-- ==================== || ADVENTURE SECTION STARTS ================= -->
     <section class="adventure-action">
       <div class="container adventure-action-wrapper">
