miximized the max size of the all common container

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
+      referrerpolicy="no-referrer"/>
     <!-- css file -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
@@ -187,7 +187,8 @@
             <div class="no-download__parent-img">
               <img
                 src="./B8A2-Gamer-Zone-main/images/Rectangle 55.png"
-                alt="" class="grid-center"/>
+                alt=""
+                class="grid-center" />
               <img
                 src="./B8A2-Gamer-Zone-main/images/Rectangle 66.png"
                 alt=""
